feat(saveengine): read raw character equipment
